# tk_solo_pj

./: .gitignore  README.md  main.py  pyproject.toml  requirments.txt
app/: main.py
app/db/: session.py
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/pages/: home.tsx
frontend/public/: openapi.json
frontend/src/app/: Header.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/components/: HideonDocs.tsx  LessonCard.tsx  LessonList.tsx  index.tsx
frontend/styles/: globals.css
